# django-store-backend

./:  env.sample  .gitignore  catalog.json  pyproject.toml  requirements.txt
blog/: models.py  views.py
blog/migrations/: 0001_initial.py
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fill_products.py
catalog/migrations/: 0001_initial.py  0002_product_views.py
catalog/templates/: base.html
catalog/templates/catalog/: home.html  product_detail.html
catalog/templates/includes/: menu.html
config/: settings.py  urls.py
