[tool.poetry]
name = "django-store-backend"
version = "0.1.0"
description = ""
authors = ["Dmitry <dima.soin2014@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.7"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
