[tool.poetry]
name = "django-store-backend"
version = "0.1.0"
description = ""
authors = ["Dmitry <dima.soin2014@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.7"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.11"
asttokens = "==3.0.0"
colorama = "==0.4.6"
decorator = "==5.2.1"
executing = "==2.2.1"
ipython = "==9.6.0"
ipython-pygments-lexers = "==1.1.1"
jedi = "==0.19.2"
matplotlib-inline = "==0.1.7"
parso = "==0.8.5"
prompt-toolkit = "==3.0.52"
pure-eval = "==0.2.3"
stack-data = "==0.6.3"
traitlets = "==5.14.3"
wcwidth = "==0.2.14"
pillow = "^12.0.0"
djangorestframework = "^3.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
